# altis-baseliner

./: CMakeLists.txt  CMakePresets.json  README.md
altis/: CMakeLists.txt
altis/level1/: CMakeLists.txt
altis/level1/gups/: CMakeLists.txt  ComparisonWithAltis.MD  Gups.hpp  gups-protocol.json
altis/level1/gups/cuda/: Gups.cu
altis/level1/pathfinder/: CMakeLists.txt  ComparisonWithAltis.MD  PathFinder.cu  PathFinder.hpp  main.cu  pathfinder-protocol.json
altis/level1/pathfinder/cuda/: PathFinder.cu
altis/level1/sort/: CMakeLists.txt  SortKernel.cu  SortKernel.hpp  main.cu
results/: 698a1e92da66.json  698f5b134226.json
